@@ -691,12 +691,12 @@ extern void screen_switch_rainbow_buffer(void);
 #define RISCOS_COLOUR_RED       (RISCOS_INDEX_FIRST_COLOR+3)
 
 #define PCW_INDEX_FIRST_COLOR (RISCOS_INDEX_FIRST_COLOR+RISCOS_TOTAL_PALETTE_COLOURS)
-#define PCW_TOTAL_PALETTE_COLOURS 22
+#define PCW_TOTAL_PALETTE_COLOURS 26
 
 #define PCW_COLOUR_BLACK (PCW_INDEX_FIRST_COLOR+0)
 #define PCW_COLOUR_GREEN (PCW_INDEX_FIRST_COLOR+1)
 #define PCW_COLOUR_START_MODE1 (PCW_INDEX_FIRST_COLOR+2)
-#define PCW_COLOUR_START_MODE2 (PCW_COLOUR_START_MODE1+4)
+#define PCW_COLOUR_START_MODE2 (PCW_COLOUR_START_MODE1+8)
 
 
 #define QNX_INDEX_FIRST_COLOR (PCW_INDEX_FIRST_COLOR+PCW_TOTAL_PALETTE_COLOURS)
