@@ -22,6 +22,7 @@ Added more vintage Spectrum programs/games from me
 Added Debug Sensors SPK & MIC Bit from port FEH
 Added some tape copiers to Storage-> Tape menu
 Added setting for fast welcome message
+Added PCW Video mode 1 palette selector
 
 * Improvements:
 
